@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.37
+ * @version 0.13.38
  */
 
 /* Breaks */
@@ -13,7 +13,7 @@
 @bg-base: bisque; /* #ffe4c4 hsl(33, 100%, 88%) */
 @bg-dark: khaki;
 @bg-darker: sandybrown;
-@bg-darkest: sienna;
+@bg-darkest: hsl(0 0 0.2); /* #333 gray20 */
 
 @text-close: firebrick;
 @text-dark: black;
@@ -59,7 +59,7 @@
 @dialog-title-min-width: 6rem;
 @display-text-min-width: 12rem;
 @display-text-max-width: 24rem;
-@doc-item-height: 80vh;
+@doc-item-height: 75vh;
 @ds-form-max-height-vertical: 60vh;
 @ds-form-max-width-horizontal: 21rem;
 @error-max-width: 50rem;
