@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.37
+ * @version 0.13.38
  */
 @import "wcom-05-constants";
 *, *::before, *::after {
@@ -119,8 +119,8 @@ main {
                 display: flex; flex-direction: column; gap: 1rem; opacity: 1;
                 transition: opacity 1s;
                 .block-container {
-                    align-items: center; display: flex; flex-wrap: wrap;
-                    gap: 1rem; justify-content: space-evenly;
+                    display: flex; flex-wrap: wrap; gap: 1rem;
+                    justify-content: space-evenly;
                 }
                 &.fade {
                     opacity: 0;
